--- a/Dockerfiles/control/Dockerfile
+++ b/Dockerfiles/control/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get install -y --force-yes curl tcpdump iptables openssh-server rsync so
 RUN apt-get -q -y update
 RUN mkdir -p /var/run/sshd /var/log/supervisor
 RUN sed -i 's/START=no/START=yes/' /etc/default/puppet
-RUN echo 'root:ladakh1' | chpasswd
+RUN echo 'root:password' | chpasswd
 RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 RUN rm /usr/sbin/policy-rc.d; \
