--- a/Dockerfiles/dns/Dockerfile
+++ b/Dockerfiles/dns/Dockerfile
@@ -10,7 +10,7 @@ RUN dpkg -i puppetlabs-release-trusty.deb
 RUN apt-get update
 RUN apt-get install -y puppet curl tcpdump iptables openssh-server wget dnsmasq
 RUN sed -i 's/START=no/START=yes/' /etc/default/puppet
-RUN echo 'root:ladakh1' | chpasswd
+RUN echo 'root:password' | chpasswd
 RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 RUN sed -i 's/#conf-dir=\/etc\/dnsmasq.d/conf-dir=\/etc\/dnsmasq.d/g' /etc/dnsmasq.conf
