--- a/Dockerfiles/dns/hieradata/node/conf1.endor.lab.yaml
+++ b/Dockerfiles/dns/hieradata/node/conf1.endor.lab.yaml
@@ -1,7 +1,7 @@
 contrail::params::internal_vip: "vip"
 contrail::params::keystone_admin_user: "admin"
 contrail::params::keystone_admin_tenant: "admin"
-contrail::params::keystone_admin_password: "ladakh1"
+contrail::params::keystone_admin_password: "password"
 contrail::params::config_ip_list: ['conf1']
 contrail::params::analytics_syslog_port: -1
 contrail::params::enable_config: True
@@ -13,7 +13,7 @@ contrail::params::control_ip_list: ['ctrl1']
 contrail::params::host_roles: ['config']
 contrail::params::hc_interval: 5
 contrail::params::database_name_list: ['cas1']
-contrail::params::openstack_passwd_list: ['ladakh1']
+contrail::params::openstack_passwd_list: ['password']
 contrail::params::webui_user_list: ['root']
 contrail::params::control_name_list: ['ctrl1']
 contrail::params::encap_priority: "MPLSoUDP,MPLSoGRE,VXLAN"
@@ -26,7 +26,7 @@ contrail::params::collector_name_list: ['coll1']
 contrail::params::webui_ip_list: ['webui1']
 contrail::params::external_bgp: ""
 contrail::params::keystone_service_tenant: "service"
-contrail::params::keystone_service_token: "ladakh1"
+contrail::params::keystone_service_token: "password"
 contrail::params::database_ip_list: ['cas1']
 contrail::params::contrail_rabbit_port: 5672
 contrail::params::zookeeper_ip_list: ['cas1']
