--- a/Dockerfiles/dns/hieradata/node/ctrl1.endor.lab.yaml
+++ b/Dockerfiles/dns/hieradata/node/ctrl1.endor.lab.yaml
@@ -13,11 +13,11 @@ contrail::params::host_roles: ['control']
 contrail::params::internal_vip: "vip"
 contrail::params::keystone_admin_user: "admin"
 contrail::params::keystone_admin_tenant: "admin"
-contrail::params::keystone_admin_password: "ladakh1"
+contrail::params::keystone_admin_password: "password"
 contrail::params::keystone_service_tenant: "service"
-contrail::params::keystone_service_token: "ladakh1"
+contrail::params::keystone_service_token: "password"
 contrail::params::openstack_ip_list: ['vip']
-contrail::params::openstack_passwd: "ladakh1"
+contrail::params::openstack_passwd: "password"
 contrail::params::use_certs: False
 contrail::params::webui_ip_list: ['webui1']
 contrail::params::webui_user_list: ['root']
