--- a/Dockerfiles/dns/modules/mymod/files/glance-registry.conf
+++ b/Dockerfiles/dns/modules/mymod/files/glance-registry.conf
@@ -135,7 +135,7 @@ notification_driver = noop
 # The backend to use for db (string value)
 # Deprecated group/name - [DEFAULT]/db_backend
 backend = sqlalchemy
-connection = mysql://glance:ladakh1@vip/glance
+connection = mysql://glance:password@vip/glance
 
 # The SQLAlchemy connection string used to connect to the
 # database (string value)
@@ -226,7 +226,7 @@ sql_idle_timeout = 240
 identity_uri = http://vip:35357
 admin_tenant_name = service
 admin_user = glance
-admin_password = ladakh1
+admin_password = password
 auth_uri = http://vip:5000/v2.0
 
 [paste_deploy]
