--- a/Dockerfiles/galera/Dockerfile
+++ b/Dockerfiles/galera/Dockerfile
@@ -15,7 +15,7 @@ RUN dpkg -i puppetlabs-release-trusty.deb
 RUN apt-get update
 RUN apt-get -y --force-yes install mariadb-galera-server galera-3 mariadb-client puppet
 RUN mkdir -p /var/run/sshd /var/log/supervisor
-RUN echo 'root:ladakh1' | chpasswd
+RUN echo 'root:password' | chpasswd
 RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 # SSH login fix. Otherwise user is kicked off after login
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
