--- a/Dockerfiles/puppet/Dockerfile
+++ b/Dockerfiles/puppet/Dockerfile
@@ -14,7 +14,7 @@ RUN dpkg -i puppetlabs-release-trusty.deb
 RUN apt-get update
 RUN apt-get install -y puppetmaster-passenger
 #RUN sed -i 's/START=no/START=yes/' /etc/default/puppet
-RUN echo 'root:ladakh1' | chpasswd
+RUN echo 'root:password' | chpasswd
 RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
 # SSH login fix. Otherwise user is kicked off after login
 RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
