--- a/dockervolumes/puppet1/etc/puppet/modules/mymod/files/keystone.conf
+++ b/dockervolumes/puppet1/etc/puppet/modules/mymod/files/keystone.conf
@@ -417,7 +417,7 @@ verbose=True
 # paths. (string value)
 # Deprecated group/name - [DEFAULT]/logdir
 log_dir=/var/log/keystone
-admin_token = ladakh1
+admin_token = password
 
 # Use syslog for logging. Existing syslog format is DEPRECATED
 # during I, and will change in J to honor RFC5424. (boolean
@@ -630,7 +630,7 @@ admin_token = ladakh1
 # Deprecated group/name - [DEFAULT]/sql_connection
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
-connection=mysql://keystone:ladakh1@vip/keystone
+connection=mysql://keystone:password@vip/keystone
 
 # The SQLAlchemy connection string to use to connect to the
 # slave database. (string value)
